# SiliconMemory

./: .gitignore  .gitmodules  API.md  CLAUDE.md  EPIC-cognitive-memory-layer.md  IMPLEMENTATION_PLAN.md  README.md  llms.txt  pyproject.toml  start.sh
examples/: __init__.py  basic_usage.py  conversational_agent.py  knowledge_base.py  llm_tools.py
specs/: AccessControlSimple.cfg  AccessControlSimple.tla  AuditLogIntegrity.cfg  AuditLogIntegrity.tla  BeliefSystem.cfg  BeliefSystem.tla  ForgettingSimple.tla  README.md  TenantIsolationSimple.cfg  TenantIsolationSimple.tla
src/silicon_memory/: __init__.py
src/silicon_memory/clients/: __init__.py  anthropic.py  base.py  openai.py
src/silicon_memory/core/: __init__.py  decision.py  exceptions.py  protocols.py  types.py  utils.py
src/silicon_memory/decision/: __init__.py  synthesis.py  types.py
src/silicon_memory/dspy/: __init__.py  modules.py
src/silicon_memory/entities/: __init__.py  cache.py  learner.py  resolver.py  rules.py  store.py  types.py
src/silicon_memory/graph/: __init__.py  explorer.py  queries.py  tool.py  types.py
src/silicon_memory/ingestion/: __init__.py  _helpers.py  chat.py  discord.py  document.py  email.py  meeting.py  news.py  slack.py  teams.py  types.py
src/silicon_memory/llm/: __init__.py  config.py  provider.py  scheduler.py
src/silicon_memory/memory/: __init__.py  silicondb_router.py
src/silicon_memory/reflection/: __init__.py  consolidation.py  engine.py  generator.py  hypothesis.py  inference.py  llm_extractor.py  patterns.py  processor.py  tool.py  types.py
src/silicon_memory/retrieval/: __init__.py  salience.py
src/silicon_memory/security/: __init__.py  audit.py  authorization.py  config.py  forgetting.py  (+5 more)
tests/: __init__.py  conftest.py  embedder_cache.py  llm_provider.py  test_chat_ingestion.py  test_decision.py  test_decision_synthesis.py  test_discord_ingestion.py  test_document_ingestion.py  test_e2e.py  test_e2e_cognition.py  test_e2e_cognitive.py  test_e2e_entity_resolver.py  test_e2e_entity_rules.py  test_e2e_full.py  test_e2e_server.py  test_e2e_silicondb.py  test_email_ingestion.py  test_embedder.py  test_entity_resolver.py  test_entity_rule_store.py  test_ingestion.py  test_ingestion_helpers.py  test_integration.py  test_integration_cognitive.py  test_llm_scheduler.py  test_news_integration.py  test_salience.py  test_security.py  test_security_e2e.py  test_slack_ingestion.py  test_snapshot.py  test_teams_ingestion.py
(+46 files in other folders)
