[project]
name = "silicon-memory"
version = "0.1.0"
description = "Multi-layered memory system for LLM augmentation with temporal awareness and belief tracking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Birger" }
]
keywords = ["memory", "llm", "rag", "beliefs", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "silicondb>=0.1",  # Required - all storage backed by SiliconDB
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "hypothesis>=6.0",
    "numpy>=1.26",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mcp>=1.26",
    "silicon-memory[llm]",
]
dspy = [
    "dspy>=3.0",
]
all = [
    "silicon-memory[dev,llm,server,dspy]",
]

[project.scripts]
silicon-memory-server = "silicon_memory.server.__main__:main"

[project.urls]
Repository = "https://github.com/birgerlie/silicon-memory"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silicon_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires SILICONDB_LIBRARY_PATH)",
    "e2e: marks tests as end-to-end tests (requires SILICONDB_LIBRARY_PATH)",
    "slow: marks tests as slow running",
]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:silicondb.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests"]

[tool.coverage.run]
source = ["src/silicon_memory"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
